fixed overflow svg + svg logo nuevo

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,8 @@ body {
   height: 100vh;
   font-family: "Nunito Sans", sans-serif;
   background-color: #fafafa;
-  overflow-x: hidden;
+  /*   overflow-x: hidden;
+ */
 }
 
 ul {
@@ -424,7 +425,6 @@ header {
     justify-content: space-between;
     .logo_hero {
       display: block;
-      margin-right: -5rem;
       position: relative;
       z-index: 1;
     }
